# git2s3

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pre_commit.sh  pyproject.toml  release_notes.rst  requirements.txt
.github/workflows/: markdown.yaml  python-publish.yaml  release_notes.yaml
doc_gen/: conf.py  index.rst
docs/: README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
git2s3/: __init__.py  config.py  exc.py  main.py  models.py  s3.py  squire.py
samples/: .env  README.md  secrets.json  secrets.yaml
