[project]
name = "git2s3"
dynamic = ["version", "dependencies"]
description = "Backup GitHub projects to AWS S3"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup"
]
keywords = ["git2s3", "backup"]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["git2s3"]

[tool.setuptools.dynamic]
version = {attr = "git2s3.version"}
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["sphinx==5.1.1", "pre-commit", "recommonmark", "gitverse"]

[project.scripts]
# sends all the args to commandline function, where the arbitary commands as processed accordingly
git2s3 = "git2s3:commandline"

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/git2s3"
Docs = "https://thevickypedia.github.io/git2s3"
Source = "https://github.com/thevickypedia/git2s3"
"Bug Tracker" = "https://github.com/thevickypedia/git2s3/issues"
"Release Notes" = "https://github.com/thevickypedia/git2s3/blob/main/release_notes.rst"
